--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "typescript": "~3.0.1"
   },
   "license": "CC-BY-4.0",
-  "dependencies": {}
+  "dependencies": {
+    "@types/requirejs": "^2.1.31",
+    "requirejs": "^2.3.6"
+  }
 }
